p3-semantics/tests/LoopWhileCond.mj.err
 line 2, column 11: error: loop while condition must be a boolean
