p3-semantics/tests/LoopWhileCond.mj
{
  while 1 loop {}
}